--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body {
+  align-items: center;
   background-image: url("bg1.jpg");
 }
 .frm {
+  /* align-items: center; */
   width: 150px;
   height: 150px;
   padding: 75px;
   border: 4px solid;
   font-size: large;
-  text-align: justify;
+  text-align: center;
 }
 legend {
   text-align: center;
@@ -18,6 +20,12 @@ legend {
   height: 20px;
   border-radius: 5px;
   /* margin-top: 20px; */
+}
+.password:hover {
+  background-color: blanchedalmond;
+}
+.username:hover {
+  background-color: aquamarine;
 }
 .username {
   width: 150px;
@@ -40,4 +48,21 @@ legend {
 }
 .usr {
   margin-top: 20px;
+}
+.navbar {
+  background-color: black;
+  border-radius: 30px;
+}
+.navbar li {
+  float: left;
+  list-style: none;
+  margin: 13px 20px;
+}
+.navbar ul {
+  overflow: auto;
+}
+.navbar li a {
+  padding: 3px 3px;
+  text-decoration: none;
+  color: white;
 }
